k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: github-action-app
  labels:
    name: github-action-app
    app: github-action-app
